Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Deepak Chadha</h1>
 
         <!-- 2. SHORT DESCRIPTION -->
-        <p>A short description about you!</p>
+        <p>My short description about you!</p>
 
         <!-- 3. SOCIAL MEDIA -->
         <ul class="icons">
